[package]
name = "lsm"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
nannou = "0.18"
winit = "0.26.1"
serde_json = "1.0"
serde = "1.0"

[build-dependencies]
cc = "1.0"
