[package]
name = "lsm"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
rfd = "0.8.2"
serde = "1.0"
nannou = "0.18"
winit = "0.26.1"
chrono = "0.4.19"
array2d = "0.2.1"
serde_json = "1.0"
nannou_egui = "0.5.0"

[build-dependencies]
cc = "1.0"

[[bin]]
name="sim"
path="src/bin/simulator.rs"

[[bin]]
name="edit"
path="src/bin/editor.rs"
